--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='//fonts.googleapis.com/css?family=Annie Use Your Telescope' rel='stylesheet'>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="quote.css" rel="stylesheet">
+    <script src="quote.js"></script>
   </head>
   <body>
     <div id="main">
