--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href='//fonts.googleapis.com/css?family=Annie Use Your Telescope' rel='stylesheet'>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="quote.css" rel="stylesheet">
+    <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="quote.js"></script>
   </head>
   <body>
