--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="quote.css" rel="stylesheet">
     <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="quote.js"></script>
   </head>
   <body>
